--- a/KitchenSink/app/src/main/res/values/strings.xml
+++ b/KitchenSink/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="nofm">%1$d of %2$d</string>
+    <string name="title_activity_percent_layout">PercentLayoutActivity</string>
 </resources>
