--- a/KitchenSink/app/src/main/res/values/strings.xml
+++ b/KitchenSink/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nofm">%1$d of %2$d</string>
     <string name="title_activity_percent_layout">PercentLayoutActivity</string>
     <string name="title_activity_ratio_layout">RatioLayoutActivity</string>
+    <string name="go_to_the_next_one">Go to the next one!</string>
 </resources>
